Added delete account, revised login and users
